fix footer link covering whole section, and create contact form

--- a/components/Footer/Footer.module.scss
+++ b/components/Footer/Footer.module.scss
@@ -15,6 +15,7 @@
     .logo {
       grid-column: 1/13;
       margin-bottom: 2rem;
+      height: 118px;
     }
     h4 {
       font-size: 16px;
